Fix returning duplicate skills in GET response